# cube-solver

./: Cargo.toml  README.md
cube_android/: Cargo.toml
cube_android/src/: lib.rs
cube_ios/: Cargo.toml
cube_ios/.cargo/: config.toml
cube_ios/src/: lib.rs
cube_solver/: Cargo.toml
cube_solver/src/: app.rs  camera.rs  colors.rs  components.rs  cube.rs  cube_moves.rs  input.rs  layer_components.rs  layer_rotation.rs  lib.rs  ray_caster.rs  selection.rs  solver_integration.rs
cube_solver/src/ui/: color_panel.rs  mod.rs  move_test.rs  navigation.rs  rotations_panel.rs  solve.rs
scripts/: run_android_emulator.sh
